# markus-autotesting-core

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
markus_autotesting_core/types/: __init__.py  types.py
src/markus_autotesting_core/types/: types.py
tests/test_types/: test_core.py
