[project]
name = "markus-autotesting-core"
version = "0.1.0"
description = "Core functionality for Markus Autotesting"
authors = [
    {name = "David Liu", email = "david@cs.toronto.edu"}
]
license = "MIT"
readme = "README.md"
keywords = ["autotesting", "markus"]
dependencies = [
    "msgspec"
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/MarkUsProject/markus-autotesting-core"
Repository = "https://github.com/MarkUsProject/markus-autotesting-core.git"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "python_ta.__version__"}
#readme = {file = "README.md", content-type = "text/markdown"}

[tool.setuptools.packages.find]
include = ["markus_autotesting_core*"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.3",
]
