[project]
name = "markus-autotesting-core"
version = "0.1.0"
description = "Core functionality for Markus Autotesting"
maintainers = [
    {name = "David Liu", email = "david@cs.toronto.edu"}
]
license = "MIT"
readme = "README.md"
keywords = ["autotesting", "markus"]
dependencies = [
    "msgspec"
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/MarkUsProject/markus-autotesting-core"
Repository = "https://github.com/MarkUsProject/markus-autotesting-core.git"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.3",
]
